added BS4 stylesheet

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,2 +1,2 @@
-.center{margin: auto; width: 50%; border: 3px solid grey; padding: 10px; }
+/*.center{margin: auto; width: 50%; border: 3px solid grey; padding: 10px; }*/
 .imgPoster{max-width:200px; width:100%;white-space:no-wrap;}
