--- a/css/custom.css
+++ b/css/custom.css
@@ -1,2 +1,3 @@
-/*.center{margin: auto; width: 50%; border: 3px solid grey; padding: 10px; }*/
 .imgPoster{max-width:200px; width:100%;white-space:no-wrap;}
+.movieContainer{border:1px solid rgb(69, 55, 36); background: rgb(161, 213, 253);}
+#headerBg{background-image:url("../imgs/wood.jpg");background-repeat: no-repeat; background-position: center;background-color: rgb(227, 198, 154);}
